[package]
name = "gluon-binder"
version.workspace = true
edition.workspace = true

[workspace]
members = ["gluon-wire"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[dependencies]
binderbinder.workspace = true
chumsky = "0.12.0"

[workspace.dependencies]
binderbinder = { path = "../binderbinder" }

[dev-dependencies]
tempfile = "3"
